# ml-sample

./: main.ipynb  pyproject.toml  sandbox.joblib
